// compile with protoc --java_out ../java
//      classpath for compile command should include ../../../target/classes and protobuf-java-2.2.0.jar

package datawave.edge.protobuf;

option java_package = "datawave.edge.protobuf";
option optimize_for = SPEED;

// Used for the Accumulo Value bytes for Edge Table and edge Metadata Table entries
message EdgeValue {
  message UUID {
      required sint64 least_significant_bits = 1;
      required sint64 most_significant_bits = 2;
  }

  optional int64 count = 1;                   // edge table count
  repeated int64 hours = 2 [packed=true];     // hour activity array (length 24)
                                              // protobuf says that repeated order will be preserved
                                              // packed means it won't appear in serialized data
                                              // that doesn't contain any hours fields.
  repeated int64 duration = 3 [packed=true];  // Duration histogram, length 7
  optional int32 hourBitmask = 4;			  // Bitmask for tracking edge creation by the hour.
  optional string sourceValue = 5;
  optional string sinkValue = 6;
  optional string loadDate = 7;
  optional bool badActivity = 8;
  optional UUID uuid = 9;                     //a single uuid of an event that contributed to the edge
  optional string uuid_string = 10;            // a single uuid of an event that contributed to the edge in string format


}

// moved this out because no need for Metadata values to appear in the standard edge table.
// this would be fixed if packed=true worked on strings, but meh
message MetadataValue {
  message Metadata {
      required string source = 1;
      required string sink = 2;
      optional string enrichment = 3;
      optional string enrichmentIndex = 4;
      optional string date = 5;
      optional string jexlPrecondition = 6;
  }
  repeated Metadata metadata = 1;
}

